fixed documentation errors
