# controllers/problem_controller.go
@@ -20,7 +20,7 @@ func NewProblemController(repo *repository.ProblemRepository) *ProblemController
 	return &ProblemController{Repo: repo}
 }
 
-// CreateProblem handles POST /problems
+// CreateProblem handles POST /problemsedit
 // @Summary Create a new problem
 // @Description Create a new problem in the database
 // @Tags Problems
@@ -28,7 +28,7 @@ func NewProblemController(repo *repository.ProblemRepository) *ProblemController
 // @Produce json
 // @Param problem body models.Problem true "Problem data"
 // @Success 200 {object} models.Problem
-// @Router /problems [post]
+// @Router /problemsedit [post]
 func (ctrl *ProblemController) CreateProblem(c *gin.Context) {
 
 	var problem models.Problem
@@ -68,7 +68,7 @@ func (ctrl *ProblemController) GetProblemByID(c *gin.Context) {
 	c.JSON(http.StatusOK, problem)
 }
 
-// UpdateProblem handles PUT /problems/:id
+// UpdateProblem handles PUT /problemsedit/:id
 // @Summary Update a problem
 // @Description Update an existing problem by its ID
 // @Tags Problems
@@ -77,7 +77,7 @@ func (ctrl *ProblemController) GetProblemByID(c *gin.Context) {
 // @Param id path string true "Problem ID"
 // @Param problem body models.Problem true "Updated problem data"
 // @Success 200 {object} models.Problem
-// @Router /problems/{id} [put]
+// @Router /problemsedit/{id} [put]
 func (ctrl *ProblemController) UpdateProblem(c *gin.Context) {
 	session := c.MustGet("session").(models.Session)
 	if session.UserID == primitive.NilObjectID {
@@ -103,13 +103,13 @@ func (ctrl *ProblemController) UpdateProblem(c *gin.Context) {
 	c.JSON(http.StatusOK, problem)
 }
 
-// DeleteProblem handles DELETE /problems/:id
+// DeleteProblem handles DELETE /problemsedit/:id
 // @Summary Delete a problem
 // @Description Delete a problem by its ID
 // @Tags Problems
 // @Produce json
 // @Param id path string true "Problem ID"
-// @Router /problems/{id} [delete]
+// @Router /problemsedit/{id} [delete]
 func (ctrl *ProblemController) DeleteProblem(c *gin.Context) {
 	session := c.MustGet("session").(models.Session)
 	if session.UserID == primitive.NilObjectID {
